--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <div class="row">
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
-                            <h1 class="promo-block-title">Alisa <br/> Portman</h1>
-                            <p class="promo-block-text">Web &amp; UI/UX Designer</p>
+                            <h1 class="promo-block-title">Lucas <br/> Hermann</h1>
+                            <p class="promo-block-text">Desarrollador</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
