--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
                             <p class="promo-block-text">Desarrollador &amp<br/> Técnico Electrónico </p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-dribbble"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-behance"></i></a></li>
                             <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="#" class="social-icons"><i class="icon-social-instagram"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
