--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         </div>
                         <ul class="list-inline">
                             <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li>
                             <li><a href="#" class="social-icons"><i class="icon-social-instagram"></i></a></li>
                         </ul>
                     </div>
