--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         </div>
                         <ul class="list-inline">
                             <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-instagram"></i></a></li>
+                            <li><a href="https://github.com/lucashermannit" class="social-icons"><i class="icon-social-github"></i></a></li>
+                            <li><a href="https://www.instagram.com/lucashermannit/" class="social-icons"><i class="icon-social-instagram"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
@@ -112,7 +112,7 @@
                                     <p>Soy Lucas Hermann, técnico electrónico y desarrollador. Aunque me defino como emprendedor ya que esta es mi pasión</p>
                                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 </div>
-                                <a href="#" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Descargar CV (PDF)</a>
+                                <a href="https://drive.google.com/file/d/1jF8V-o8Yx4WJ9iQWyTB2FBFpGJECV3N3/view?usp=sharing" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Descargar CV (PDF)</a>
                             </div>
                         </div>
 
