--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <p class="promo-block-text">Desarrollador &amp<br/> Técnico Electrónico </p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/lucas-hermann-quintana-erbetta-48b755214/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                             <li><a href="https://github.com/lucashermannit" class="social-icons"><i class="icon-social-github"></i></a></li>
                             <li><a href="https://www.instagram.com/lucashermannit/" class="social-icons"><i class="icon-social-instagram"></i></a></li>
                         </ul>
