--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Adobe Photoshop <span class="color-heading pull-right">96%</span></h5>
+                            <h5>C<span class="color-heading pull-right">11 años</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
                             </div>
