--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <p class="promo-block-text">Desarrollador &amp<br/> Técnico Electrónico </p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="https://www.linkedin.com/in/lucas-hermann-quintana-erbetta-48b755214/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/lucashermannit/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                             <li><a href="https://github.com/lucashermannit" class="social-icons"><i class="icon-social-github"></i></a></li>
                             <li><a href="https://www.instagram.com/lucashermannit/" class="social-icons"><i class="icon-social-instagram"></i></a></li>
                         </ul>
@@ -119,27 +119,27 @@
                         <h2>My Skills</h2>
                         <!-- Progress Box -->
                         <div class="progress-box">
-                            <h5>C<span class="color-heading pull-right">11 años</span></h5>
+                            <h5>C, ASM<span class="color-heading pull-right">11 años</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="100"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>ASM<span class="color-heading pull-right">11 años</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="100"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>C++<span class="color-heading pull-right">87%</span></h5>
+                            <h5>C++<span class="color-heading pull-right">9 años</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="81"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>C++<span class="color-heading pull-right">87%</span></h5>
+                            <h5>Python<span class="color-heading pull-right">7 años</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="81"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="63"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>HTML, CSS, JS<span class="color-heading pull-right">5 años</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="45"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
