--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             </div>
                         </div>
 
-                        <h2>My Skills</h2>
+                        <h2>Conocimientos</h2>
                         <!-- Progress Box -->
                         <div class="progress-box">
                             <h5>C, ASM<span class="color-heading pull-right">11 años</span></h5>
@@ -314,28 +314,28 @@
                 <div class="container content-lg">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
-                           <h2>Contact Me</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                           <h2>Contacto</h2>
+                            <p>Por consultas contactame a través de:</p>
                         </div>
                     </div>
                     <!--// end row -->
 
                     <div class="row">
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Location</h4>
-                            <a href="#">Brookyln, New York</a>
+                            <h4>Ubicación</h4>
+                            <a href="#">Buenos Aires, Argentina</a>
                         </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Phone</h4>
-                            <a href="#">+77 234 548 00 00</a>
+                            <h4>Teléfono</h4>
+                            <a href="#">+5411 xxxx xxxx</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
-                            <h4>Email</h4>
-                            <a href="mailto:#">alex.teseira@gmail.com</a>
+                            <h4>Correo Electrónico</h4>
+                            <a href="mailto:#">lquintanaerbetta@gmail.com</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
-                            <h4>Web</h4>
-                            <a href="#">alex.teseira.com</a>
+                            <h4>Página Web</h4>
+                            <a href="#">xxxxxxx.com</a>
                         </div>
                     </div>
                     <!--// end row -->
