--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Correo Electrónico</h4>
-                            <a href="mailto:#">lquintanaerbetta@gmail.com</a>
+                            <a href="mailto:#">lucashermannit@gmail.com</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Página Web</h4>
