--- a/index.html
+++ b/index.html
@@ -315,16 +315,12 @@
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
                            <h2>Contacto</h2>
-                            <p>Por consultas contactame a través de:</p>
+                            <p>Por consultas contactame</p>
                         </div>
                     </div>
                     <!--// end row -->
 
                     <div class="row">
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Ubicación</h4>
-                            <a href="#">Buenos Aires, Argentina</a>
-                        </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Teléfono</h4>
                             <a href="#">+5411 xxxx xxxx</a>
@@ -336,6 +332,10 @@
                         <div class="col-md-3 col-xs-6">
                             <h4>Página Web</h4>
                             <a href="#">xxxxxxx.com</a>
+                        </div>
+                        <div class="col-md-3 col-xs-6 md-margin-b-30">
+                            <h4>Ubicación</h4>
+                            <a href="#">Buenos Aires, Argentina</a>
                         </div>
                     </div>
                     <!--// end row -->
