--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         <img class="footer-logo" src="img/logo.png" alt="Acecv Logo">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="">Acecv</a>  <a class="fweight-700" href="</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="">Lucas Hermann IT</a>  <a class="fweight-700" href=""</a></p>
                     </div>
                 </div>
                 <!--// end row -->
