--- a/index.html
+++ b/index.html
@@ -109,8 +109,15 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>Acerca</h2>
-                                    <p>Soy Lucas Hermann, técnico electrónico y desarrollador. Aunque me defino como emprendedor ya que esta es mi pasión</p>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>Soy Lucas Hermann estudiante de Sistemas de la UBA, Técnico Electrónico del Otto Krause y hoy profesor de física en esa escuela.
+Aunque el papel no lo diga prefiero definirme como emprendedor.</p>
+                                    <p>Desde hace unos años vengo montando y probando distintos emprendimientos casi parece a modo de pasatiempo lo que me llevó a hoy estar trabajando con 6 locales y de esta forma aprender habilidades que en la academia no se enseña: trato con clientes y socios comerciales, formas de promocionar un producto, opciones de venta y algunos que otros temas de marketing y publicidad.</p>
+                                    <p>También tengo otro pasatiempo y quizás es con el cual me asocian más los que me conocen, la fotografía.
+Con mi cámara compilé fotos a través de varios viajes y pude retratar para uno de mis proyectos fotográficos distintas personas a las cuales pregunto "¿Qué te hace feliz?" de esta forma a la fecha ya conversé con más de 100 personas de distintos lugares, además de hacer algunos amigos en el camino.
+Creo que dicen que soy sociable y abierto.</p>
+                                    <p>En resumidas cuentas con cada proyecto y pasatiempo busco aprender y conocer más de eso que todavía desconozco.
+Hoy quiero dar el siguiente paso en mi vida profesional por lo que decidí montar esta página y perfiles que más arriba se pueden ver.
+Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a la empresa que así decida darme un espacio para desarrollarme laboralmente.</p>
                                 </div>
                                 <a href="https://drive.google.com/file/d/1jF8V-o8Yx4WJ9iQWyTB2FBFpGJECV3N3/view?usp=sharing" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Descargar CV (PDF)</a>
                             </div>
