--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
                         <img class="footer-logo" src="" alt="">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700">Linkedin: Lucas Hermann</a>  <a class="fweight-700"</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Linkedin: Lucas Hermann</a>  <a class="fweight-700"</a></p>
                     </div>
                 </div>
                 <!--// end row -->
@@ -320,7 +320,7 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
         <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Subir</a>
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
