--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
                             <a href="#">+5411 xxxx xxxx</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
-                            <h4>Página Web</h4>
-                            <a href="#">xxxxxxx.com</a>
+                            <h4>Perfil de Linkedin</h4>
+                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann</a>
                         </div>
                     </div>
                     <!--// end row -->
@@ -311,7 +311,7 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
                         <img class="footer-logo" src="" alt="">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Linkedin: Lucas Hermann</a>  <a class="fweight-700"</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Ver en Linkedin</a>  <a class="fweight-700"</a></p>
                     </div>
                 </div>
                 <!--// end row -->
