--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
         <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Subir</a>
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">TOP</a>
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
