--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/mockup/avatar-01.png" align="Avatar">
+                            <img class="promo-block-img img-responsive" src="img/perfil/01.png" align="Perfil">
                         </div>
                     </div>
                 </div>
