--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                         <!-- Logo -->
                         <div class="logo">
-                            <a class="logo-wrap" href="#body">
+                            <a class="logo-wrap" href="https://www.linkedin.com/in/lucashermannit/">
                                 <img class="logo-img" src="img/logo.png" alt="Asentus Logo">
                             </a>
                         </div>
