--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Inicio</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Acerca</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Conocimientos</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Emprendimientos</a></li>
+                                <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Emprendimientos</a></li> -->
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
@@ -168,9 +168,10 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
         </div>
         <!-- End Experience -->
         <!-- ACA -->
-        <!-- Contact -->
+        <!-- Contacto -->
         <div id="contact">
-            <div class="bg-color-sky-light">
+            <!-- <div class="bg-color-sky-light"> --> 
+            <div class="bg-color-base">
                 <div class="container content-lg">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
