--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
         <!-- Contacto -->
         <div id="contact">
             <!-- <div class="bg-color-sky-light"> --> 
-            <div class="bg-color-red">
+            <div class="bg-white">
                 <div class="container content-lg">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
