--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a l
                         </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Ubicación</h4>
-                            <a href="#">Buenos Aires, Argentina</a>
+                            <a href="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.5580717,-58.6834405,9.75z/data=!4m5!3m4!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591">Capital Federal, Bs. As., Argentina</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Teléfono</h4>
