Commit desde VSC

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <h2>Acerca</h2>
                                     <p>Soy Lucas Hermann estudiante de Sistemas de la UBA, Técnico Electrónico del Otto Krause y hoy profesor de física en esa escuela.
 Aunque el papel no lo diga prefiero definirme como emprendedor.</p>
-                                    <p>Desde hace unos años vengo montando y probando distintos emprendimientos casi parece a modo de pasatiempo lo que me llevó a hoy estar trabajando con 6 locales y de esta forma aprender habilidades que en la academia no se enseña: trato con clientes y socios comerciales, formas de promocionar un producto, opciones de venta y algunos que otros temas de marketing y publicidad.</p>
+                                    <p>Desde hace unos años vengo montando y probando distintos emprendimientos casi a modo de pasatiempo lo que me llevó a hoy estar trabajando con 6 locales y de esta forma aprender habilidades que en la academia no se enseña: trato con clientes y socios comerciales, formas de promocionar un producto, opciones de venta y algunos que otros temas de marketing y publicidad.</p>
                                     <p>También tengo otro pasatiempo y quizás es con el cual me asocian más los que me conocen, la fotografía.
 Con mi cámara compilé fotos a través de varios viajes y pude retratar para uno de mis proyectos fotográficos distintas personas a las cuales pregunto "¿Qué te hace feliz?" de esta forma a la fecha ya conversé con más de 100 personas de distintos lugares, además de hacer algunos amigos en el camino.
 Creo que dicen que soy sociable y abierto.</p>
