--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Lucas <br/> Hermann</h1>
-                            <p class="promo-block-text">Desarrollador &amp<br/> Técnico Electrónico </p>
+                            <p class="promo-block-text">Emprendedor &amp<br/> Desarrollador</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/lucashermannit/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
