--- a/index.html
+++ b/index.html
@@ -109,15 +109,11 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>Acerca</h2>
-                                    <p>Soy Lucas Hermann estudiante de Sistemas de la UBA, Técnico Electrónico del Otto Krause y hoy profesor de física en esa escuela.
-Aunque el papel no lo diga prefiero definirme como emprendedor.</p>
-                                    <p>Desde hace unos años vengo montando y probando distintos emprendimientos casi a modo de pasatiempo lo que me llevó a hoy estar trabajando con 6 locales y de esta forma aprender habilidades que en la academia no se enseña: trato con clientes y socios comerciales, formas de promocionar un producto, opciones de venta y algunos que otros temas de marketing y publicidad.</p>
-                                    <p>También tengo otro pasatiempo y quizás es con el cual me asocian más los que me conocen, la fotografía.
-Con mi cámara compilé fotos a través de varios viajes y pude retratar para uno de mis proyectos fotográficos distintas personas a las cuales pregunto "¿Qué te hace feliz?" de esta forma a la fecha ya conversé con más de 100 personas de distintos lugares, además de hacer algunos amigos en el camino.
-Creo que dicen que soy sociable y abierto.</p>
-                                    <p>En resumidas cuentas con cada proyecto y pasatiempo busco aprender y conocer más de eso que todavía desconozco.
-Hoy quiero dar el siguiente paso en mi vida profesional por lo que decidí montar esta página y perfiles que más arriba se pueden ver.
-Quiero aplicar lo aprendido tanto en la academia como en mis emprendimientos a la empresa que así decida darme un espacio para desarrollarme laboralmente.</p>
+                                    <p>Soy Lucas Hermann estudiante de Sistemas en la UBA, Técnico Electrónico del Otto Krause y hoy profesor de física en esa escuela. Aunque el papel no lo diga prefiero definirme como emprendedor.</p>
+                                    <p>Desde hace unos 8 años pruebo, inicio y finalizo emprendimientos casi a modo de pasatiempo, lo que me llevó hoy a estar trabajando con más de 9 tiendas físicas, aprendiendo distintas habilidades en el recorrido, como trato con clientes y socios comerciales, promoción de productos y servicios, opciones y planes de venta, además de temas relacionados al marketing y la publicidad.</p>
+                                    <p>También tengo otro pasatiempo y quizás es con el cual me asocian más los que me conocen, la fotografía. Con mi cámara compilé fotos a través de varios viajes pudiendo retratar a la fecha más de 100 personas para uno de mis proyectos.
+En este les pregunto "¿Qué te hace feliz?" (Instagram: @loquemehacefeliz.ig), después de unos años fotografíando y conversando con desconocidos por la calle algunos amigos dicen que soy una persona sociable y abierta.</p>
+                                    <p>En resumidas cuentas con cada proyecto y pasatiempo busco aprender y conocer más de eso que todavía desconozco.</p>
                                 </div>
                                 <a href="https://drive.google.com/file/d/19mdQoVy-8MuL3GoVqDiiBxtOm0AUWalI/view?usp=sharing" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Descargar CV (PDF)</a>
                             </div>
