--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Inicio</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Acerca</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Conocimientos</a></li>
-                                <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Emprendimientos</a></li> -->
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
@@ -77,12 +77,13 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Lucas <br/> Hermann</h1>
-                            <p class="promo-block-text">Emprendedor &amp<br/> Desarrollador</p>
+                            <p class="promo-block-text">Emprendedor | Desarrollador | Fotógrafo</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="https://www.linkedin.com/in/lucashermannit/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href="https://github.com/lucashermannit" class="social-icons"><i class="icon-social-github"></i></a></li>
-                            <li><a href="https://www.instagram.com/lucashermannit/" class="social-icons"><i class="icon-social-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/lucashermannit/" class="social-icons"><i class="bi bi-linkedin"></i></a></li>
+                            <li><a href="https://github.com/lucashermannit/" class="social-icons"><i class="bi bi-github"></i></i></a></li>
+                            <li><a href="https://www.instagram.com/lucashermannph/" class="social-icons"><i class="bi bi-instagram"></i></a></li>
+                            <li><a href="https://wa.me/+5491122923987/" class="social-icons"><i class="bi bi-whatsapp"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
@@ -124,6 +125,22 @@ En este les pregunto "¿Qué te hace feliz?" (Instagram: @loquemehacefeliz.ig), 
             </div>
         </div>
         <!-- End About -->
+
+        <!-- Work -->
+        <div id="work">
+            <div class="bg-color-sky-light" data-auto-height="true">
+                <div class="container content-lg">
+                    <div class="row row-space-2 margin-b-4">
+                       <h2>Proyectos</h2>
+                         
+                    </div>
+                    <!--// end row -->
+                </div>
+            </div>
+        </div>
+        <!-- End Work -->
+
+
 
         <!-- Experience -->
         <div id="experience">
@@ -172,12 +189,30 @@ En este les pregunto "¿Qué te hace feliz?" (Instagram: @loquemehacefeliz.ig), 
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
                            <h2>Contacto</h2>
-                            <p>Por consultas contactame</p>
                         </div>
                     </div>
                     <!--// end row -->
 
                     <div class="row">
+                        <div class="col-md-3 col-xs-6 md-margin-b-30">
+                            <h4>WhatsApp</h4>
+                            <a href="https://wa.me/+5491122923987/">+54 9 11-2292-3987 - [Enviar]</a>
+                        </div>
+                        <div class="col-md-3 col-xs-6 md-margin-b-30">
+                            <h4>Correo Electrónico</h4>
+                            <a href="mailto:lucashermannit@gmail.com">Lucas Hermann IT - [Enviar]</a>
+                        </div>
+                        <div class="col-md-3 col-xs-6">
+                            <h4>Instagram</h4>
+                            <a href="https://www.instagram.com/lucashermannph/">Lucas Hermann PH - [Visitar]</a>
+                        </div>
+                        <div class="col-md-3 col-xs-6">
+                            <h4>Linkedin</h4>
+                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann - [Visitar]</a>
+                        </div>
+                    </div>
+
+                    <!--<div class="row">
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Correo Electrónico</h4>
                             <a href="mailto:#">lucashermannit@gmail.com</a>
@@ -194,7 +229,7 @@ En este les pregunto "¿Qué te hace feliz?" (Instagram: @loquemehacefeliz.ig), 
                             <h4>Perfil de Linkedin</h4>
                             <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann</a>
                         </div>
-                    </div>
+                    </div>-->
                     <!--// end row -->
                 </div>
             </div>
@@ -241,6 +276,8 @@ En este les pregunto "¿Qué te hace feliz?" (Instagram: @loquemehacefeliz.ig), 
         <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
         <script src="js/components/swiper.min.js" type="text/javascript"></script>
         <script src="js/components/wow.min.js" type="text/javascript"></script>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     </body>
     <!-- END BODY -->
