cambio color fondo secciones

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ En este les pregunto "¿Qué te hace feliz?" (Instagram: @loquemehacefeliz.ig), 
 
         <!-- Experience -->
         <div id="experience">
-            <div class="bg-color-sky-light" data-auto-height="true">
+            <div class="bg-white" data-auto-height="true">
                 <div class="container content-lg">
                     <div class="row row-space-2 margin-b-4">
                        <h2>Conocimientos</h2>
@@ -184,7 +184,7 @@ En este les pregunto "¿Qué te hace feliz?" (Instagram: @loquemehacefeliz.ig), 
         <!-- Contacto -->
         <div id="contact">
             <!-- <div class="bg-color-sky-light"> --> 
-            <div class="bg-white">
+            <div class="bg-color-sky-light">
                 <div class="container content-lg">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
