agrego datos a estudios y experiencia

--- a/cv.html
+++ b/cv.html
@@ -126,6 +126,19 @@
                                 <br>- Autogestión y planificación de proyectos
                                 <br>- Diseño, tanto estético como funcional
                                 <br>- Pruebas de calidad y funcionamiento</p>
+                                <p>Tecnologías utilizadas:
+                                <br>- HTML5
+                                <br>- CSS3
+                                <br>- JS ES6
+                                <br>- Bootstrap v5.2
+                                <br>- JSON
+                                <br>- jQuery Biblioteca </p>
+
+                                <p>Programas de diseño:
+                                <br>- PS, Adobe Photoshop 2020
+                                <br>- LrC, Adobe Lightroom 2020
+                                <br>- Autodesk Sketchbook Pro 6.2
+                                </p>
                                 <p><a href="https://www.adabaires.com/">Visitar: www.adabaires.com</a></p>
                             </div>
                         </div>
@@ -212,32 +225,51 @@
             <div class="bg-white" data-auto-height="true">
                 <div class="container content-lg">
                     <div class="row row-space-2 margin-b-4">
-                       <h2>Estudios</h2>
+                       <h2>Educación</h2>
                         <!-- Progress Box -->
-                        <div class="progress-box">
-                            <h5>C, ASM<span class="color-heading pull-right">11 años</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="100"></div>
+
+                        <div class="margin-b-50">
+                            <div class="progress-box">
+                                <h3>Licenciatura en Análisis de Sistemas - UBA<span class="color-heading pull-right">mar. 2018 - actualidad</span></h3>
+                                <div class="progress">
+                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
+                                </div>
+                                <p>Desarrollo en:
+                                <br>- C
+                                <br>- C++ 
+                                <br>- Python </p>
                             </div>
                         </div>
-                        <div class="progress-box">
-                            <h5>C++<span class="color-heading pull-right">9 años</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="81"></div>
+
+                        <div class="margin-b-50">
+                            <div class="progress-box">
+                                <h3>Ingeniería Electrónica - UBA<span class="color-heading pull-right">mar. 2013 - dic. 2017</span></h3>
+                                <div class="progress">
+                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="35"></div>
+                                </div>
+                                <p>Estudio circuitos electrónicos digitales</p>
+
+                                <p>Desarrollo en:
+                                <br>- C
+                                <br>- C++ </p>
                             </div>
                         </div>
-                        <div class="progress-box">
-                            <h5>Python<span class="color-heading pull-right">7 años</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="63"></div>
+
+                        <div class="margin-b-50">
+                            <div class="progress-box">
+                                <h3>Técnico Electrónico - Escuela Técnica Otto Krause <span class="color-heading pull-right">mar. 2007 - dic. 2012</span></h3>
+                                <div class="progress">
+                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="100"></div>
+                                </div>
+                                <p>Prototipado, fabricación y puesta en marcha de circuitos electrónicos, analógicos y digitales</p>
+                                <p>Estudio microprocesadores familia Intel</p>
+                                <p>Desarrollo en:
+                                <br>- C
+                                <br>- C++ 
+                                <br>- ASM para microcontroladores Motorola</p>
                             </div>
                         </div>
-                        <div class="progress-box">
-                            <h5>HTML, CSS, JS<span class="color-heading pull-right">5 años</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="45"></div>
-                            </div>
-                        </div>
+                                                
                         <!-- End Progress Box --> 
                     </div>
                     <!--// end row -->
