--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <li><a href="https://www.linkedin.com/in/lucashermannit/" class="social-icons"><i class="bi bi-linkedin"></i></a></li>
                             <li><a href="https://github.com/lucashermannit/" class="social-icons"><i class="bi bi-github"></i></i></a></li>
                             <li><a href="https://www.instagram.com/lucashermannph/" class="social-icons"><i class="bi bi-instagram"></i></a></li>
-                            <li><a href="https://www.youtube.com/channel/UC9svyeG2wQS5y3dlRLItGbQ/videos" class="social-icons"><i class="bi bi-youtube"></i></a></li>
+                            <li><a href="https://www.youtube.com/@lucashermann.shorts/shorts" class="social-icons"><i class="bi bi-youtube"></i></a></li>
                             <li><a href="https://wa.me/+5491122923987/" class="social-icons"><i class="bi bi-whatsapp"></i></a></li>
                         </ul>
                     </div>
