Oculto work de Index, lo muestro en CV

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
         <!-- End About -->
 
-        <!-- Work -->
+<!-- Work
         <div id="work">
             <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="container content-lg">
@@ -256,7 +256,8 @@
                 </div>
             </div>
         </div>
-        <!-- End Work -->
+End Work -->
+
 
 
 
