Oculto Experiencia (estudio), queda en CV copiado

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ End Work -->
 
 
 
-        <!-- Experience -->
+<!-- Experience
         <div id="experience">
             <div class="bg-white" data-auto-height="true">
                 <div class="container content-lg">
@@ -316,7 +316,8 @@ End Work -->
                 </div>
             </div>
         </div>
-        <!-- End Experience -->
+End Experience -->
+
         <!-- ACA -->
         <!-- Contacto -->
         <div id="contact">
