Oculto link (logos) a redes sociales

--- a/cv.html
+++ b/cv.html
@@ -78,6 +78,7 @@
                             <h1 class="promo-block-title">Lucas <br/> Hermann</h1>
                             <p class="promo-block-text">Emprendedor | Desarrollador | Fotógrafo</p>
                         </div>
+                        <!-- REDES SOCIALES        
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/lucashermannit/" class="social-icons"><i class="bi bi-linkedin"></i></a></li>
                             <li><a href="https://github.com/lucashermannit/" class="social-icons"><i class="bi bi-github"></i></i></a></li>
@@ -85,6 +86,8 @@
                             <li><a href="https://www.youtube.com/channel/UC9svyeG2wQS5y3dlRLItGbQ/videos" class="social-icons"><i class="bi bi-youtube"></i></a></li>
                             <li><a href="https://wa.me/+5491122923987/" class="social-icons"><i class="bi bi-whatsapp"></i></a></li>
                         </ul>
+                        END REDES SOCIALES -->
+                
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
