--- a/cv.html
+++ b/cv.html
@@ -87,7 +87,11 @@
                             <li><a href="https://wa.me/+5491122923987/" class="social-icons"><i class="bi bi-whatsapp"></i></a></li>
                         </ul>
                         END REDES SOCIALES -->
-                
+                        
+                        <ul class="list-inline">
+                            <li><a href="https://drive.google.com/file/d/12ykF-BU4Qn43m1xW-7nTD8DhZiAafikK/view?usp=sharing" class="btn-theme btn-theme-md btn-default-bg text-uppercase"><i class="bi bi-file-pdf"></i>  Descargar CV (PDF)</a></li>
+                            <li><a href="https://www.linkedin.com/in/lucashermannit/" class="btn-theme btn-theme-md btn-default-bg text-uppercase"><i class="bi bi-linkedin"></i>  Ver en Linkedin</a></li>
+                        </ul>
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
