--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <title>Lucas Hermann</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="" name="description"/>
+        <meta content="Lucas Hermann" name="description"/>
         <meta content="" name="author"/>
+
+        <link href="img/favicon.ico" rel="icon">
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
