--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Lucas Hermann</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="Lucas Hermann" name="description"/>
+        <meta content="Lucas Hermann" name="Buscame en las redes como Lucas Hermann"/>
         <meta content="" name="author"/>
 
         <link href="img/favicon.ico" rel="icon">
