Agrego icono en cv

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Inicio</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Sobre mi</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Estudios</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="cv.html">CV</a></li>
+
+                                <!--<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Estudios</a></li>-->
                             </ul>
                         </div>
                     </div>
