--- a/cv.html
+++ b/cv.html
@@ -10,6 +10,8 @@
         <meta content="" name="description"/>
         <meta content="" name="author"/>
 
+        <link href="img/favicon.ico" rel="icon">
+
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
         <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
