--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
         <title>Lucas Hermann</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="" name="description"/>
+        <meta content="Emprendedor | Desarrollador | Fotógrafo" name="description"/>
         <meta content="" name="author"/>
 
         <link href="img/favicon.ico" rel="icon">
