Cambio direccion cv.html por cv. Agrego .htaccess

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Inicio</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Sobre mi</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="cv.html">CV</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="cv">CV</a></li>
 
                                 <!--<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Estudios</a></li>-->
