--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Estudios</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="../">Más</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/">Más</a></li>
                             </ul>
                         </div>
                     </div>
