--- a/ph.html
+++ b/ph.html
@@ -101,72 +101,7 @@
                 <div class="container content-lg">
                     <div class="row row-space-2 margin-b-3">
 
-                        <h2>Experiencia y Proyectos</h2>
-
-                        <div class="margin-b-50">
-                            <div class="progress-box">
-                                <h3>ADA Baires<span class="color-heading pull-right">feb. 2022 - actualidad</span></h3>
-                                <div class="progress">
-                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="15"></div>
-                                </div>
-                                <p>Desarrollador Web Frontend
-                                <br>- Desarrollo y mantenimiento de páginas web de clientes
-                                <br>- Mejora y optimización de las mismas</p>
-                                <p>Habilidades adquiridas:
-                                <br>- Autogestión y planificación de proyectos
-                                <br>- Diseño, tanto estético como funcional
-                                <br>- Pruebas de calidad y funcionamiento</p>
-                                <p>Tecnologías utilizadas:
-                                <br>- HTML5
-                                <br>- CSS3
-                                <br>- JS ES6
-                                <br>- Bootstrap v5.2
-                                <br>- JSON
-                                <br>- jQuery Biblioteca </p>
-
-                                <p>Programas de diseño:
-                                <br>- PS, Adobe Photoshop 2020
-                                <br>- LrC, Adobe Lightroom 2020
-                                <br>- Autodesk Sketchbook Pro 6.2
-                                </p>
-                                <p><a href="https://www.adabaires.com/">Visitar: www.adabaires.com</a></p>
-                            </div>
-                        </div>
-
-                        <div class="margin-b-50">
-                            <div class="progress-box">
-                                <h3>GOAR - Geek Online Argentina<span class="color-heading pull-right">mar. 2018 - actualidad</span></h3>
-                                <div class="progress">
-                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="45"></div>
-                                </div>
-                                <p>Responsable de operaciones y proyectos
-                                <br>- Cierre de acuerdos comerciales
-                                <br>- Definición y automatización de procesos</p>
-                                <p>Habilidades adquiridas:
-                                <br>- Negociación
-                                <br>- Resolución de problemas
-                                <br>- Cotización de costos y manufactura
-                                <br>- Optimización de tareas</p>
-                                <p><a href="https://www.instagram.com/geekonline.ar/">Visitar: @geekonline.ar</a></p>
-                            </div>
-                        </div>
-
-                        <div class="margin-b-50">
-                            <div class="progress-box">
-                                <h3>Profesor Física - E.T.Nro. 1 "Otto Krause"<span class="color-heading pull-right">oct. 2013 - actualidad</span></h3>
-                                <div class="progress">
-                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="90"></div>
-                                </div>
-                                <p>A cargo de Física I y II
-                                <br>Contando con 3 cursos de más de 30 alumnos cada uno
-                                <p>Habilidades adquiridas:
-                                <br>- Comunicación y oratoria
-                                <br>- Realización y seguimiento de cronograma
-                                <br>- Cumplimiento de fechas
-                                <br>- Trabajo con equipos numerosos</p>
-                                <p><a href="https://es.wikipedia.org/wiki/Escuela_T%C3%A9cnica_Otto_Krause">Visitar: Escuela Técnica Nro 1 Otto Krause</a></p>
-                            </div>
-                        </div>
+                        <h2>Proyectos</h2>
 
                         <div class="margin-b-50">
                             <div class="progress-box">
