--- a/fotoeditada.html
+++ b/fotoeditada.html
@@ -105,9 +105,9 @@
                         <div class="col-sm-2">
                             <div class="wrapper">
                             <div class="before">
-                                <img class="content-image" src="img/editada/01.jpg" draggable="false"/>   </div>
+                                <img class="content-image" src="img/editada/01.png" draggable="false"/>   </div>
                             <div class="after">
-                                <img class="content-image" src="img/editada/02.jpg" draggable="false"/>
+                                <img class="content-image" src="img/editada/02.png" draggable="false"/>
                             </div>
                             <div class="scroller">
                                 <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><polygon points="0 50 37 68 37 32 0 50" style="fill:#fff"/><polygon points="100 50 64 32 64 68 100 50" style="fill:#fff"/></svg>
