Agrego bio a /pn

--- a/ph.html
+++ b/ph.html
@@ -79,6 +79,17 @@
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Lucas <br/> Hermann</h1>
                             <p class="promo-block-text"><a href="https://www.instagram.com/lucashermannph/" class="social-icons"><i class="bi bi-instagram"></i></a> @lucashermannph </p>
+                            <p>
+                                Muy buenas, soy Lucas Hermann y me dedico a la fotografía desde 2014.
+                                <br>
+                                Aunque este arte me acompaña desde que nací, ya que soy la tercera generación en mi familia en dedicarse a esto, más puntualmente a la fotografía de viaje.
+                                <br>
+                            </p>
+                            <p>
+                                Esta pasión inició al ver los recuerdos capturados por mi abuelo durante su viaje en barco por todo América. Pero esa es historia para otro día... 
+                                <br>
+                                Porque acá vas a encontrar mis recuerdos
+                            </p>
                         </div>
 
                     </div>
