--- a/fotos.html
+++ b/fotos.html
@@ -30,8 +30,8 @@
         <style>
 
     swiper-container {
-      width: 360px;
-      height: 240px;
+      width: 330px;
+      height: 220px;
     }
 
     swiper-slide {
@@ -161,28 +161,40 @@
             </div>
         </div>
         <!--========== SLIDER ==========-->
-
         <!--========== PAGE LAYOUT ==========-->
         <!-- About -->
         <div id="about">
             <div class="container content-lg">
                 <div class="row">
-                    <h2>Fotos mundial 2022</h2>
-                                                                
-                    <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                        <swiper-slide><img class="logo-img" src="img/instagram/01.PNG" alt="imagen1" width="105%"></swiper-slide>
-                        <swiper-slide><img class="logo-img" src="img/instagram/02.PNG" alt="imagen2" width="105%"></swiper-slide>
-                        <swiper-slide><img class="logo-img" src="img/instagram/03.PNG" alt="imagen3" width="105%"></swiper-slide>
-                        <swiper-slide><img class="logo-img" src="img/instagram/04.PNG" alt="imagen4" width="105%"></swiper-slide>
-                    </swiper-container>
+                    <div class="col-lg-4">
+                        <h3>Fotos mundial 2022</h2>
+                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
+                            <swiper-slide><img class="logo-img" src="img/instagram/01.PNG" alt="imagen1" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/02.PNG" alt="imagen2" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/03.PNG" alt="imagen3" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/04.PNG" alt="imagen4" width="105%"></swiper-slide>
+                        </swiper-container>
+                    </div>
 
+                    <div class="col-lg-4">
+                        <h3>Fotos mundial 2022</h2>
+                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
+                            <swiper-slide><img class="logo-img" src="img/instagram/01.PNG" alt="imagen1" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/02.PNG" alt="imagen2" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/03.PNG" alt="imagen3" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/04.PNG" alt="imagen4" width="105%"></swiper-slide>
+                        </swiper-container>
+                    </div>
 
-
-
-
-
-
-
+                    <div class="col-lg-4">
+                        <h3>Fotos mundial 2022</h2>
+                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
+                            <swiper-slide><img class="logo-img" src="img/instagram/01.PNG" alt="imagen1" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/02.PNG" alt="imagen2" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/03.PNG" alt="imagen3" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/04.PNG" alt="imagen4" width="105%"></swiper-slide>
+                        </swiper-container>
+                    </div>
 
 
 
