Arreglo grillas index y ph

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/perfil/01.png" align="Perfil">
+                            <img class="promo-block-img img-fluid" src="img/perfil/01.png" align="Perfil" width="450">
                         </div>
                     </div>
                 </div>
