Pruebo imagenes webp

--- a/ph.html
+++ b/ph.html
@@ -115,8 +115,8 @@
                         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                             <swiper-slide><img class="logo-img" src="img/instagram/01.PNG" alt="imagen1" width="105%"></swiper-slide>
                             <swiper-slide><img class="logo-img" src="img/instagram/02.PNG" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.PNG" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.PNG" alt="imagen4" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
                         </swiper-container>
                     </div>
                     <div class="col-lg-4">
